add password for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ services:
   db:
     image: mariadb:latest
     environment:
-      # ตั้งรหัสผ่าน root เป็นค่าว่าง (สำหรับ MariaDB ต้องใช้ ALLOW_EMPTY_PASSWORD)
-      MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 'yes'
-      # ตั้งชื่อ Database ให้ตรงกับใน PrismaService ของคุณ
-      MARIADB_DATABASE: ll2_hotel
+      # ตั้งรหัสผ่านเป็น root (หรืออะไรก็ได้ที่คุณชอบ)
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: ll2_hotel
     ports:
       - '3306:3306'
 
